--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -7,7 +7,7 @@ kotlinx-coroutines-core = "1.9.0"
 logback = "1.5.12"
 kotlinx-rpc = "0.4.0"
 kotlinx-html = "0.11.0"
-kotlinwind = "0.0.4"
+kotlinwind = "0.1.0"
 
 [libraries]
 # kotlin
@@ -57,6 +57,8 @@ kotlinx-rpc-krpc-serialization-json = { module = "org.jetbrains.kotlinx:kotlinx-
 
 # styling
 kotlinwind = { module = "io.github.allangomes:kotlinwind-css", version.ref = "kotlinwind" }
+kotlinwindJs = { module = "io.github.allangomes:kotlinwind-css-js", version.ref = "kotlinwind" }
+kotlinwindJvm = { module = "io.github.allangomes:kotlinwind-css-jvm", version.ref = "kotlinwind" }
 
 [plugins]
 kotlin-plugin-serialization = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref = "kotlin" }
